--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - env:
           GITHUB_CONTEXT: "${{ toJson(github) }}"
-          PR_URL: "${{ github.event.issue.pull_request.url }}"
-          PR_NUM: ${PR_URL##*/}
         name: "Dump GitHub context"
         run: 'echo "$GITHUB_CONTEXT"'
       - name: "get pullrequest url"
         run: echo "${{ github.event.issue.pull_request.url }}"
+      - name: "get pullrequest num"
+        run: echo "${{ github.event.issue.pull_request.number }}"
       - name: "echo upstream branch"
         run: "echo ${{ steps.upstreambranch.outputs.branchname }}\n"
       - name: Checkout Pull Request
