--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - name: "get pullrequest url"
         run: echo "${{ github.event.issue.pull_request.url }}"
       - name: "get pullrequest num"
-        run: echo "${{ github.event.issue.pull_request.number }}"
+        run: echo "${{ github.event.pull_request.number }}"
       - name: "echo upstream branch"
         run: "echo ${{ steps.upstreambranch.outputs.branchname }}\n"
       - name: "echo Comment"
