--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,8 +14,8 @@ jobs:
         run: 'echo "$GITHUB_CONTEXT"'
       - name: "get pullrequest url"
         run: echo "${{ github.event.issue.pull_request.url }}"
-      - name: "get pullrequest num"
-        run: echo "${{ github.event.pull_request.number }}"
+      - name: "get pullrequest"
+        run: echo "${{ github.event.pull_request }}"
       - name: "echo upstream branch"
         run: "echo ${{ steps.upstreambranch.outputs.branchname }}\n"
       - name: Checkout Pull Request
@@ -26,7 +26,6 @@ jobs:
         uses: actions/github-script@v2
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
-          issue-number: ${{ toJson(github.event.pull_request.number) }}
           script: |
             github.issues.createComment({
             owner: context.repo.owner,
