--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,14 +14,15 @@ jobs:
         run: 'echo "$GITHUB_CONTEXT"'
       - name: "get pullrequest url"
         run: echo "${{ github.event.issue.pull_request.url }}"
-      - name: "get pullrequest num"
-        run: echo "${{ github.event.pull_request.number }}"
+      # - name: "get pullrequest num"
+      #   run: echo "${{ github.event.pull_request.number }}"
       - name: "echo upstream branch"
         run: "echo ${{ steps.upstreambranch.outputs.branchname }}\n"
       - name: "echo Comment"
         run: echo "${{ github.event.comment.body }}\n"
       - name: PR Comment
         uses: actions/github-script@v2
+        run: echo "${{ GITHUB_CONTEXT.event.issue.pull_request.html_url }}"
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           issue-number: ${{ toJson(github.event.pull_request.number) }}
@@ -29,5 +30,6 @@ jobs:
             github.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: 'Hello World'
+            body: 'Hello World',
+            url: GITHUB_CONTEXT.event.issue.pull_request.html_url
             })
