--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,9 +22,10 @@ jobs:
         run: echo "${{github.event.number}}"
       - name: "echo Comment"
         run: echo "${{ github.event.comment.body }}\n"
+      - name: html_url
+        run: echo "${{ GITHUB_CONTEXT.event.issue.pull_request.html_url }}"
       - name: PR Comment
         uses: actions/github-script@v2
-        run: echo "${{ GITHUB_CONTEXT.event.issue.pull_request.html_url }}"
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
