--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,9 +12,9 @@ jobs:
           GITHUB_CONTEXT: "${{ toJson(github) }}"
           EVENTS: "${{ toJson(github.event) }}"
         name: "Dump GitHub context"
-        run: 'echo "$GITHUB_CONTEXT"'
-      - name: git hub events
-        run: echo "$EVENTS"
+        run: |
+          'echo "$GITHUB_CONTEXT"'
+          'echo "$EVENTS"'
       - name: "get pullrequest url"
         run: echo ${{ toJson(github).event.number }}
       - name: "get pullrequest"
