--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,8 +30,8 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
+            issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             body: 'Hello World',
-            url: GITHUB_CONTEXT.event.issue.pull_request.html_url
             })
