--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
-            issue_number: context.issue.number,
+            url: HTML_URL,
             owner: context.repo.owner,
             repo: context.repo.repo,
             body: 'Hello World',
