--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,14 @@ jobs:
         run: echo "${{ github.event.comment.body }}\n"
       - name: html_url
         run: 'echo "$GITHUB_CONTEXT.event"'
+      - name: print comment
+      - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-create-comment@v1
+        if: ${{ startsWith(github.event.comment.body, '/hello') }}
+        with:
+          github_token: ${{ secrets.github_token }}
+          body: |
+           Hello, @${{ github.actor }}!
       - name: PR Comment
         uses: actions/github-script@v2
         with:
