--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,7 @@ jobs:
       - name: html_url
         run: 'echo "$GITHUB_CONTEXT.event"'
       - name: print comment
-      - uses: actions/checkout@v2
-      - uses: actions-ecosystem/action-create-comment@v1
+        uses: actions-ecosystem/action-create-comment@v1 | actions-ecosystem/action-create-comment@v1
         if: ${{ startsWith(github.event.comment.body, '/hello') }}
         with:
           github_token: ${{ secrets.github_token }}
