--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,6 +7,7 @@ env:
   GITHUB_CONTEXT: "${{ toJson(github) }}"
   EVENTS: "${{ toJson(github.event) }}"
   HTML_URL: "${{ toJson(github.event.issue.pull_request.html_url) }}"
+  ISSUE_NUM: ${{GITHUB_CONTEXT.issue.number}}
 jobs:
   job01:
     if: "contains(github.event.comment.html_url, '/pull/') && (contains(github.event.comment.body, 'commenttest') || contains(github.event.comment.body, 'netlify'))"
@@ -30,7 +31,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.issues.createComment({
-            url: ${{HTML_URL}},
+            issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             body: 'Hello World',
