--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,11 +27,4 @@ jobs:
       - name: PR Comment
         uses: actions/github-script@v2
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: 'Hello World',
-            })
+          script: return "Hello!"
